--- a/ScrollTest/Base.lproj/Main.storyboard
+++ b/ScrollTest/Base.lproj/Main.storyboard
@@ -17,37 +17,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5hf-Hc-m5u">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Pf-E5-690">
-                                        <rect key="frame" x="0.0" y="48" width="375" height="619"/>
-                                        <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        <connections>
-                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="aaY-aJ-sT1"/>
-                                            <outlet property="delegate" destination="BYZ-38-t0r" id="KRb-jd-FZq"/>
-                                        </connections>
-                                    </tableView>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="7Pf-E5-690" secondAttribute="trailing" id="335-w8-ZEM"/>
-                                    <constraint firstAttribute="height" constant="667" id="3cS-AS-pV9"/>
-                                    <constraint firstItem="7Pf-E5-690" firstAttribute="leading" secondItem="5hf-Hc-m5u" secondAttribute="leading" id="4Ke-9x-FUY"/>
-                                    <constraint firstAttribute="width" constant="375" id="OWB-bC-NBZ"/>
-                                    <constraint firstItem="7Pf-E5-690" firstAttribute="top" secondItem="5hf-Hc-m5u" secondAttribute="top" constant="48" id="X9B-Zp-5UY"/>
-                                    <constraint firstAttribute="bottom" secondItem="7Pf-E5-690" secondAttribute="bottom" id="f34-oq-DY6"/>
-                                    <constraint firstItem="7Pf-E5-690" firstAttribute="height" secondItem="5hf-Hc-m5u" secondAttribute="height" constant="-48" id="fO1-MX-EGX"/>
-                                    <constraint firstItem="7Pf-E5-690" firstAttribute="width" secondItem="5hf-Hc-m5u" secondAttribute="width" id="gHX-St-AVj"/>
-                                </constraints>
-                            </scrollView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Pf-E5-690">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="aaY-aJ-sT1"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="KRb-jd-FZq"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.40000000600000002" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="5hf-Hc-m5u" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1LZ-qa-OJn"/>
-                            <constraint firstItem="5hf-Hc-m5u" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RNv-aQ-dbS"/>
+                            <constraint firstItem="7Pf-E5-690" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1TK-AH-Cf9"/>
+                            <constraint firstItem="7Pf-E5-690" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Esh-Bz-kwA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7Pf-E5-690" secondAttribute="bottom" id="g1m-Ss-MWs"/>
+                            <constraint firstItem="7Pf-E5-690" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="zTr-mo-5h8"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="7Pf-E5-690" id="cJh-ZH-XkJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
