--- a/ScrollTest/Base.lproj/Main.storyboard
+++ b/ScrollTest/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,8 +21,15 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5hf-Hc-m5u">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WQz-RB-roY">
+                                        <rect key="frame" x="0.0" y="48" width="187.5" height="619"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="sgA-sC-vjq"/>
+                                        </connections>
+                                    </tableView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Pf-E5-690">
-                                        <rect key="frame" x="0.0" y="48" width="375" height="619"/>
+                                        <rect key="frame" x="187.5" y="48" width="187.5" height="619"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="dataSource" destination="BYZ-38-t0r" id="aaY-aJ-sT1"/>
@@ -32,12 +40,16 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="7Pf-E5-690" secondAttribute="trailing" id="335-w8-ZEM"/>
                                     <constraint firstAttribute="height" constant="667" id="3cS-AS-pV9"/>
-                                    <constraint firstItem="7Pf-E5-690" firstAttribute="leading" secondItem="5hf-Hc-m5u" secondAttribute="leading" id="4Ke-9x-FUY"/>
+                                    <constraint firstItem="WQz-RB-roY" firstAttribute="bottom" secondItem="7Pf-E5-690" secondAttribute="bottom" id="5Qb-Dp-31W"/>
+                                    <constraint firstItem="7Pf-E5-690" firstAttribute="width" secondItem="WQz-RB-roY" secondAttribute="width" id="Bs8-0f-tug"/>
+                                    <constraint firstItem="7Pf-E5-690" firstAttribute="leading" secondItem="WQz-RB-roY" secondAttribute="trailing" id="Cho-cP-irR"/>
+                                    <constraint firstItem="WQz-RB-roY" firstAttribute="leading" secondItem="5hf-Hc-m5u" secondAttribute="leading" id="EbT-6n-4ZP"/>
                                     <constraint firstAttribute="width" constant="375" id="OWB-bC-NBZ"/>
                                     <constraint firstItem="7Pf-E5-690" firstAttribute="top" secondItem="5hf-Hc-m5u" secondAttribute="top" constant="48" id="X9B-Zp-5UY"/>
                                     <constraint firstAttribute="bottom" secondItem="7Pf-E5-690" secondAttribute="bottom" id="f34-oq-DY6"/>
                                     <constraint firstItem="7Pf-E5-690" firstAttribute="height" secondItem="5hf-Hc-m5u" secondAttribute="height" constant="-48" id="fO1-MX-EGX"/>
-                                    <constraint firstItem="7Pf-E5-690" firstAttribute="width" secondItem="5hf-Hc-m5u" secondAttribute="width" id="gHX-St-AVj"/>
+                                    <constraint firstItem="7Pf-E5-690" firstAttribute="width" secondItem="5hf-Hc-m5u" secondAttribute="width" multiplier="0.5" id="gHX-St-AVj"/>
+                                    <constraint firstItem="WQz-RB-roY" firstAttribute="top" secondItem="7Pf-E5-690" secondAttribute="top" id="hTi-O0-sL8"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -50,6 +62,8 @@
                     </view>
                     <connections>
                         <outlet property="parentScrollView" destination="5hf-Hc-m5u" id="FM1-4l-dz7"/>
+                        <outlet property="secondTableView" destination="WQz-RB-roY" id="Tq9-3v-7Go"/>
+                        <outlet property="tableView" destination="7Pf-E5-690" id="ENt-tB-Cid"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
